--- a/frontend/src/main/angular/src/app/main-page/main-page.component.html
+++ b/frontend/src/main/angular/src/app/main-page/main-page.component.html
@@ -1,12 +1,11 @@
 <div>
-  <app-sort-settings (sortUpdated)="sortUpdated($event)">
+  <app-sort-settings (sortUpdated)="sortParamsUpdated($event)">
   </app-sort-settings>
 </div>
 <div>
-  <app-filter-settings (filterUpdated)="filterUpdated($event)">
+  <app-filter-settings (filterUpdated)="filterParamsUpdated($event)">
   </app-filter-settings>
 </div>
 <div>
-  <app-flat-table [flats]="flats">
-  </app-flat-table>
+  <app-flat-table [flats]="flats"></app-flat-table>
 </div>
